Implement code-index foundation and init command
- Setup TypeScript project structure with Commander.js
- Implement all foundational models (ProjectConfig, CodeIndexEntry, SearchResult, HealthCheck)
- Create Database service with SQLite/FTS5 integration
- Implement file utilities and logging infrastructure
- Add output formatter for human/JSON display
- Complete User Story 1: Initialize command
  - Creates .codeindex/, .claude/, and .mcp.json
  - Idempotent with --force flag
  - Updates .gitignore automatically
- All tasks T001-T027 completed successfully

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ docs/_build/
 # Custom directories (already tracked in your git status)
 # .claude/
 # .specify/
+
+# Code-index specific
+.codeindex/logs/
+.codeindex/*.log
+.codeindex/index.db-wal
+.codeindex/index.db-shm
