--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   "dependencies": {
     "better-sqlite3": "^11.10.0",
     "chalk": "^5.6.2",
+    "chokidar": "^3.6.0",
     "commander": "^12.1.0",
-    "ignore": "^6.0.2"
+    "ignore": "^6.0.2",
+    "simple-git": "^3.28.0"
   },
   "files": [
     "dist",
