--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/minimatch": "^5.1.2",
     "better-sqlite3": "^11.10.0",
     "chalk": "^5.6.2",
     "chokidar": "^3.6.0",
     "commander": "^12.1.0",
     "ignore": "^6.0.2",
+    "minimatch": "^10.0.3",
     "simple-git": "^3.28.0"
   },
   "files": [
