--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@node-rs/xxhash": "^1.7.6",
     "@types/minimatch": "^5.1.2",
     "better-sqlite3": "^11.10.0",
     "chalk": "^5.6.2",
@@ -37,7 +38,11 @@
     "commander": "^12.1.0",
     "ignore": "^6.0.2",
     "minimatch": "^10.0.3",
-    "simple-git": "^3.28.0"
+    "simple-git": "^3.28.0",
+    "tree-sitter": "^0.21.1",
+    "tree-sitter-javascript": "^0.21.4",
+    "tree-sitter-python": "^0.21.0",
+    "tree-sitter-typescript": "^0.23.2"
   },
   "files": [
     "dist",
