--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cli-progress": "^3.11.6",
     "@types/node": "^20.19.21",
+    "@types/opossum": "^8.1.9",
     "typescript": "^5.9.3",
     "vitest": "^2.1.9"
   }
