--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "chokidar": "^3.6.0",
     "cli-progress": "^3.12.0",
     "commander": "^12.1.0",
+    "dotenv": "^17.2.3",
     "ignore": "^6.0.2",
     "minimatch": "^10.0.3",
+    "neverthrow": "^8.2.0",
+    "onnxruntime-node": "^1.23.0",
     "opossum": "^8.5.0",
     "ora": "^8.2.0",
     "p-limit": "^5.0.0",
     "simple-git": "^3.28.0",
+    "sqlite-vec": "^0.1.7-alpha.2",
     "tree-sitter": "^0.21.1",
     "tree-sitter-javascript": "^0.21.4",
     "tree-sitter-python": "^0.21.0",
