chore: add test artifact directories to gitignore
Add test-generated directories to .gitignore:
- .codeindex-test-config/ (test configuration artifacts)
- tests/fixtures/temp-logs/ (temporary test log files)

These directories are created during test runs and should not be committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ docs/_build/
 .codeindex/index.db-shm
 .codeindex/models/
 .codeindex/cache/
+
+# Test artifacts
+.codeindex-test-config/
+tests/fixtures/temp-logs/
