--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.20.1",
     "@node-rs/xxhash": "^1.7.6",
     "@types/minimatch": "^5.1.2",
     "@xenova/transformers": "^2.17.2",
@@ -51,7 +52,8 @@
     "tree-sitter": "^0.21.1",
     "tree-sitter-javascript": "^0.21.4",
     "tree-sitter-python": "^0.21.0",
-    "tree-sitter-typescript": "^0.23.2"
+    "tree-sitter-typescript": "^0.23.2",
+    "zod": "^3.25.76"
   },
   "files": [
     "dist",
