feat: implement hybrid sparse+dense search with ONNX embeddings
Replaces complex transformers.js/sqlite-vec architecture with simpler
hybrid approach combining character n-gram sparse vectors (FNV-1a) and
dense embeddings (gte-small.onnx via ONNX Runtime).

Major changes:
- Add hybrid search with 0.6 dense + 0.4 sparse weighting
- Add ONNX-based embedder (384-dim, CPU inference)
- Add sparse vector service with CSR serialization
- Store full AST as JSON for zero-overhead access
- Fix gitignore handling to properly exclude dist/ and other patterns
- Simplify database to minimal file tracking only
- Remove ~14k lines of complex embedding/watcher/git infrastructure

Performance: <100ms search, 177 source files indexed (was 495 with dist/)

Breaking changes:
- Removed commands: watch, hooks, diagnose, embed, config, metrics
- Removed dependencies: @xenova/transformers, sqlite-vec
- New storage format in .codeindex/vectors/ and .codeindex/ast/

--- a/.codeindex/config.json
+++ b/.codeindex/config.json
@@ -1,38 +1,16 @@
 {
   "version": "1.0.0",
-  "profile": {
-    "name": "balanced",
-    "model": "Xenova/all-mpnet-base-v2",
-    "modelVersion": "main",
-    "backend": "onnx",
-    "device": "mps",
-    "quantization": "fp16",
-    "batchSize": 32,
-    "dimensions": 768,
-    "cacheDir": ".codeindex/cache"
+  "hybrid": {
+    "denseWeight": 0.6,
+    "sparseWeight": 0.4,
+    "model": "gte-small",
+    "dimensions": 384
   },
-  "hardwareCapabilities": {
-    "cpuCores": 16,
-    "totalRAM": 51539607552,
-    "freeRAM": 12257509376,
-    "platform": "darwin",
-    "arch": "arm64",
-    "cpuModel": "Apple M4 Max",
-    "gpu": {
-      "vendor": "Apple",
-      "name": "Apple M4 Max",
-      "memory": 51539607552,
-      "driverVersion": null,
-      "computeCapability": null,
-      "metalVersion": "4.0"
-    },
-    "detectedAt": "2025-10-14T02:22:36.296Z",
-    "onnxProviders": [
-      "CoreMLExecutionProvider",
-      "CPUExecutionProvider"
-    ]
+  "ngram": {
+    "minGram": 3,
+    "maxGram": 5,
+    "numFeatures": 262144
   },
-  "fallbackHistory": [],
-  "createdAt": "2025-10-14T02:22:36.297Z",
-  "updatedAt": "2025-10-14T02:22:36.297Z"
+  "createdAt": "2025-10-21T00:56:50.853Z",
+  "updatedAt": "2025-10-21T00:56:50.854Z"
 }
