--- a/package.json
+++ b/package.json
@@ -1,73 +1,73 @@
 {
-  "name": "@squirrelogic/code-index",
-  "version": "1.0.0",
-  "description": "A TypeScript/Node.js CLI tool for local code indexing and search using SQLite",
-  "main": "dist/cli/index.js",
-  "type": "module",
-  "bin": {
-    "code-index": "./dist/cli/index.js"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "start": "node dist/cli/index.js",
-    "prepublishOnly": "npm run build",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
-    "test:coverage": "vitest --coverage"
-  },
-  "keywords": [
-    "cli",
-    "code-index",
-    "search",
-    "sqlite",
-    "indexing",
-    "developer-tools"
-  ],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.20.1",
-    "@node-rs/xxhash": "^1.7.6",
-    "@types/minimatch": "^5.1.2",
-    "better-sqlite3": "^11.10.0",
-    "chalk": "^5.6.2",
-    "chokidar": "^3.6.0",
-    "cli-progress": "^3.12.0",
-    "commander": "^12.1.0",
-    "dotenv": "^17.2.3",
-    "ignore": "^6.0.2",
-    "minimatch": "^10.0.3",
-    "neverthrow": "^8.2.0",
-    "onnxruntime-node": "^1.14.0",
-    "opossum": "^8.5.0",
-    "ora": "^8.2.0",
-    "p-limit": "^5.0.0",
-    "simple-git": "^3.28.0",
-    "tree-sitter": "^0.21.1",
-    "tree-sitter-javascript": "^0.21.4",
-    "tree-sitter-python": "^0.21.0",
-    "tree-sitter-typescript": "^0.23.2",
-    "zod": "^3.25.76"
-  },
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
-  ],
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/cli-progress": "^3.11.6",
-    "@types/node": "^20.19.21",
-    "@types/opossum": "^8.1.9",
-    "typescript": "^5.9.3",
-    "vitest": "^2.1.9"
-  }
+    "name": "@squirrelogic/code-index",
+    "version": "0.1.0",
+    "description": "A TypeScript/Node.js CLI tool for local code indexing and search using SQLite",
+    "main": "dist/cli/index.js",
+    "type": "module",
+    "bin": {
+        "code-index": "./dist/cli/index.js"
+    },
+    "engines": {
+        "node": ">=20.0.0"
+    },
+    "scripts": {
+        "build": "tsc",
+        "dev": "tsc --watch",
+        "start": "node dist/cli/index.js",
+        "prepublishOnly": "npm run build",
+        "test": "vitest",
+        "test:watch": "vitest --watch",
+        "test:coverage": "vitest --coverage"
+    },
+    "keywords": [
+        "cli",
+        "code-index",
+        "search",
+        "sqlite",
+        "indexing",
+        "developer-tools"
+    ],
+    "author": "Squirrel Software",
+    "license": "MIT",
+    "dependencies": {
+        "@modelcontextprotocol/sdk": "^1.20.1",
+        "@node-rs/xxhash": "^1.7.6",
+        "@types/minimatch": "^5.1.2",
+        "better-sqlite3": "^11.10.0",
+        "chalk": "^5.6.2",
+        "chokidar": "^3.6.0",
+        "cli-progress": "^3.12.0",
+        "commander": "^12.1.0",
+        "dotenv": "^17.2.3",
+        "ignore": "^6.0.2",
+        "minimatch": "^10.0.3",
+        "neverthrow": "^8.2.0",
+        "onnxruntime-node": "^1.14.0",
+        "opossum": "^8.5.0",
+        "ora": "^8.2.0",
+        "p-limit": "^5.0.0",
+        "simple-git": "^3.28.0",
+        "tree-sitter": "^0.21.1",
+        "tree-sitter-javascript": "^0.21.4",
+        "tree-sitter-python": "^0.21.0",
+        "tree-sitter-typescript": "^0.23.2",
+        "zod": "^3.25.76"
+    },
+    "files": [
+        "dist",
+        "README.md",
+        "LICENSE"
+    ],
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    },
+    "devDependencies": {
+        "@types/better-sqlite3": "^7.6.13",
+        "@types/cli-progress": "^3.11.6",
+        "@types/node": "^20.19.21",
+        "@types/opossum": "^8.1.9",
+        "typescript": "^5.9.3",
+        "vitest": "^2.1.9"
+    }
 }
