--- a/package.json
+++ b/package.json
@@ -48,8 +48,21 @@
         "p-limit": "^5.0.0",
         "simple-git": "^3.28.0",
         "tree-sitter": "^0.21.1",
+        "tree-sitter-bash": "^0.21.0",
+        "tree-sitter-c": "^0.21.4",
+        "tree-sitter-c-sharp": "^0.21.3",
+        "tree-sitter-cpp": "^0.21.0",
+        "tree-sitter-go": "^0.21.2",
+        "tree-sitter-haskell": "^0.21.0",
+        "tree-sitter-html": "^0.23.2",
+        "tree-sitter-java": "^0.21.0",
         "tree-sitter-javascript": "^0.21.4",
+        "tree-sitter-json": "^0.24.8",
+        "tree-sitter-php": "^0.22.8",
         "tree-sitter-python": "^0.21.0",
+        "tree-sitter-ruby": "^0.21.0",
+        "tree-sitter-rust": "^0.21.0",
+        "tree-sitter-toml": "^0.5.1",
         "tree-sitter-typescript": "^0.23.2",
         "zod": "^3.25.76"
     },
@@ -64,7 +77,7 @@
         "registry": "https://registry.npmjs.org/"
     },
     "devDependencies": {
-        "@squirrelsoft/code-index": "^0.1.2",
+        "@squirrelsoft/code-index": "^0.1.3",
         "@types/better-sqlite3": "^7.6.13",
         "@types/cli-progress": "^3.11.6",
         "@types/node": "^20.19.21",
