--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "tree-sitter-java": "^0.21.0",
         "tree-sitter-javascript": "^0.21.4",
         "tree-sitter-json": "^0.24.8",
+        "tree-sitter-markdown": "^0.7.1",
         "tree-sitter-php": "^0.22.8",
         "tree-sitter-python": "^0.21.0",
         "tree-sitter-ruby": "^0.21.0",
